update daily chack show items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,6 +166,19 @@
     <string name="engine_status">エンジン</string>
     <string name="input_completed">入力は全て完了しました。</string>
 
+    <!--add sato-->
+    <string name="brake_status">ブレーキ系</string>
+    <string name="battery_status">バッテリー</string>
+    <string name="tire_status">タイヤホイール系</string>
+    <string name="transmission_status">トランスミッション系</string>
+    <string name="light_status">灯火系</string>
+    <string name="wiper_status">ワイパー系</string>
+    <string name="collision_avoidance_status">安全衝突回避</string>
+    <string name="air_bug_status">エアバック</string>
+    <string name="air_conditioner_status">エアコン</string>
+    <string name="other_status">その他</string>
+    <!--ここまで-->
+
     <!--　日常点検結果表示画面　-->
     <string name="day_check_show_title">入力完了</string>
 
