--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,12 +189,15 @@
     <string name="alcohol_measure_crew_info_after">乗務後</string>
     <string name="alcohol_measure_title_before_crew">アルコールチェック（乗務前）</string>
     <string name="alcohol_measure_title_after_crew">アルコールチェック（乗務後）</string>
-    <string name="alcohol_sensor_spinner_label">アルコールセンター選択</string>
+    <string name="alcohol_sensor_spinner_label">アルコールセンサー選択</string>
     <string name="alcohol_sensor_spinner_prompt">アルコールセンサーの任意番号</string>
-    <string name="alcohol_measure_message">メッセージ</string>
-    <string name="alcohol_measure_camera_message">スマホインカメラの画像</string>
+    <string name="alcohol_measure_message">アルコールセンサーを選択してください</string>
+    <string name="alcohol_measure_camera_message">カメラ表示</string>
     <string name="alcohol_measure_info">測定結果を表示する。\n\n表示項目\n    ・撮影画像\n    ・アルコールデータ\n    ・チェック日時</string>
 
+    <!--add sato-->
+    <string name="alcohol_unit">mg/L</string>
+    <!--add sato end-->
 
     <!--　アルコールメッセージ（雷）add　start -->
     <string name="alcohol_test_FwVersion">F/W version:%1$s</string>
