--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -234,6 +234,13 @@
     <string name="vital_sign_check">バイタルチェック</string>
     <string name="health_status_check">健康状態</string>
 
+    <!--add sato-->
+    <!--（乗務前）点呼結果確認画面　-->
+    <string name="call_confirm_heartbeat">心拍数</string>
+    <string name="call_confirm_max_blood_pressure">最高血圧</string>
+    <string name="call_confirm_min_blood_pressure">最低血圧</string>
+    <!--add sato end-->
+
     <!--　バイタルチェックデータ測定画面　-->
     <string name="vital_sensor_spinner_label">バイタルセンター選択</string>
     <string name="vital_measure_title">バイタルチェック</string>
