--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,8 @@
 
     <!--　共通項目　-->
     <string name="prcessing_server">通信中</string>
-
-
+    <string name="network_error">ネットワークエラーが発生しました</string>
+    <string name="login_error">ユーザーIDまたはパスワードが正しくありません</string>
 
     <!--　共通点検項目　-->
     <string name="check_brake_pedal_title">ブレーキペダル</string>
